--- a/Chart.yaml
+++ b/Chart.yaml
@@ -7,3 +7,5 @@ type: application
 version: 0.0.1
 
 appVersion: 0.7.2
+
+icon: https://raw.githubusercontent.com/andrcuns/buildkit-chart/master/icon.png
