--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,8 @@ on:
     branches:
       - master
     paths:
-      - templates/**
+      - charts/**/*
       - .helmignore
-      - Chart.yaml
-      - values.yaml
 
 jobs:
   release:
@@ -29,7 +27,5 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.0.0
-        with:
-          charts_dir: .
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
