--- a/charts/buildkit-service/Chart.yaml
+++ b/charts/buildkit-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: buildkit
+name: buildkit-service
 description: Helm chart for buildkit service deployment
 
 type: application
