--- a/charts/buildkit-service/Chart.yaml
+++ b/charts/buildkit-service/Chart.yaml
@@ -6,6 +6,6 @@ type: application
 
 version: 0.0.1
 
-appVersion: 0.7.2
+appVersion: v0.7.2
 
 icon: https://raw.githubusercontent.com/andrcuns/buildkit-chart/master/icon.png
