--- a/charts/buildkit-service/Chart.yaml
+++ b/charts/buildkit-service/Chart.yaml
@@ -1,11 +1,10 @@
 apiVersion: v2
 name: buildkit-service
 description: Helm chart for buildkit service deployment
-
 type: application
-
 version: 0.0.2
-
 appVersion: v0.7.2
-
 icon: https://raw.githubusercontent.com/andrcuns/buildkit-chart/master/icon.png
+maintainers:
+  - name: andrcuns
+    email: andrejs.cunskis@gmail.com
