--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,36 @@
-name: Release
+name: Workflow
 
 on:
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
-    paths:
-      - charts/**/*
-      - .helmignore
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
+      - name: Lint
+        uses: helm/chart-testing-action@v1.1.0
+        with:
+          command: lint
+          config: .github/ct.yaml
+
       - name: Configure Git
+        if: github.event == 'push' && github.ref == 'refs/heads/master'
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Run chart-releaser
+        if: github.event == 'push' && github.ref == 'refs/heads/master'
         uses: helm/chart-releaser-action@v1.0.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
