--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,28 +9,32 @@ on:
       - master
 
 jobs:
-  release:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
       - name: Lint
         uses: helm/chart-testing-action@v1.1.0
         with:
           command: lint
           config: .github/ct.yaml
 
+  release:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Configure Git
-        if: github.event_name == 'push'
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
       - name: Run chart-releaser
-        if: github.event_name == 'push'
         uses: helm/chart-releaser-action@v1.0.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
