--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,24 @@ jobs:
         with:
           command: lint
           config: .github/ct.yaml
+  
+  kubeval:
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+    strategy:
+      matrix:
+        k8s:
+          - v1.16.8
+          - v1.17.4
+          - v1.18.1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run kubeval
+        env:
+          KUBERNETES_VERSION: ${{ matrix.k8s }}
+        run: script/kubeval.sh
 
   release:
     if: github.event_name == 'push'
