--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,17 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - charts/**/*
+      - script/**/*
+      - .helmignore
   push:
     branches:
       - master
+    paths:
+      - charts/**/*
+      - script/**/*
+      - .helmignore
 
 env:
   CT_VERSION: "3.2.0"
@@ -25,7 +33,7 @@ jobs:
         with:
           command: lint
           config: .github/ct.yaml
-  
+
   kubeval:
     runs-on: ubuntu-latest
     needs:
@@ -47,12 +55,39 @@ jobs:
           KUBERNETES_VERSION: ${{ matrix.k8s }}
         run: script/kubeval.sh
 
+  install:
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - kubeval
+    strategy:
+      matrix:
+        k8s:
+          - 1.16.4
+          - 1.17.4
+          - 1.18.1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Create kind ${{ matrix.k8s }} cluster
+        uses: helm/kind-action@v1.0.0
+        with:
+          node_image: kindest/node:${{ matrix.k8s }}
+      - name: Install
+        uses: helm/chart-testing-action@v1.1.0
+        with:
+          command: install
+          config: .github/ct.yaml
+
   release:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs:
       - lint
       - kubeval
+      - install
     steps:
       - name: Checkout
         uses: actions/checkout@v2
