--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ on:
 env:
   CT_VERSION: "3.2.0"
   KUBEVAL_VERSION: "0.15.0"
+  KUBEVAL_DIR: tools
 
 jobs:
   lint:
@@ -42,6 +43,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Cache ct and kubeval
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.KUBEVAL_DIR }}
+          key: ${{ runner.os }}-${{ env.CT_VERSION }}-${{ env.KUBEVAL_VERSION }}
       - name: Run kubeval
         run: script/kubeval.sh
 
