--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,18 +7,18 @@ on:
     paths:
       - charts/**/*
       - script/**/*
-      - .helmignore
+      - .github/**/*
   push:
     branches:
       - master
     paths:
       - charts/**/*
       - script/**/*
-      - .helmignore
 
 env:
   CT_VERSION: "3.2.0"
   KUBEVAL_VERSION: "0.15.0"
+  KUBEVAL_DIR: tools
 
 jobs:
   lint:
@@ -43,6 +43,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Cache ct and kubeval
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.KUBEVAL_DIR }}
+          key: ${{ runner.os }}-${{ env.CT_VERSION }}-${{ env.KUBEVAL_VERSION }}
       - name: Run kubeval
         run: script/kubeval.sh
 
@@ -62,11 +67,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Check changes
+        id: changes
+        uses: helm/chart-testing-action@v1.1.0
+        with:
+          command: list-changed
       - name: Create kind ${{ matrix.k8s }} cluster
+        if: steps.changes.outputs.changed == 'true'
         uses: helm/kind-action@v1.0.0
         with:
           node_image: kindest/node:${{ matrix.k8s }}
       - name: Install
+        if: steps.changes.outputs.changed == 'true'
         uses: helm/chart-testing-action@v1.1.0
         with:
           command: install
