--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,13 @@ jobs:
         with:
           fetch-depth: 0
       - name: Lint
+        id: lint
         uses: helm/chart-testing-action@v1.1.0
         with:
           command: lint
           config: .github/ct-lint.yaml
       - name: Lint docs
+        if: steps.lint.outputs.changed == 'true'
         run: .github/script/helm-docs.sh
 
   kubeval:
@@ -44,7 +46,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Check changes
+        id: changes
+        uses: helm/chart-testing-action@v1.1.0
+        with:
+          command: list-changed
       - name: Run kubeval
+        if: steps.changes.outputs.changed == 'true'
         run: .github/script/kubeval.sh
 
   install:
