--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ on:
 
 env:
   KUBEVAL_VERSION: "0.15.0"
+  HELMDOCS_VERSION: "1.4.0"
 
 jobs:
   lint:
@@ -27,10 +28,14 @@ jobs:
         with:
           fetch-depth: 0
       - name: Lint
+        id: lint
         uses: helm/chart-testing-action@v1.1.0
         with:
           command: lint
-          config: .github/ct.yaml
+          config: .github/ct-lint.yaml
+      - name: Lint docs
+        if: steps.lint.outputs.changed == 'true'
+        run: .github/script/helm-docs.sh
 
   kubeval:
     runs-on: ubuntu-latest
@@ -41,13 +46,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Cache kubeval
-        uses: actions/cache@v2
+      - name: Check changes
+        id: changes
+        uses: helm/chart-testing-action@v1.1.0
         with:
-          path: kubeval
-          key: ${{ runner.os }}-kubeval-${{ env.KUBEVAL_VERSION }}
+          command: list-changed
       - name: Run kubeval
-        run: script/kubeval.sh
+        if: steps.changes.outputs.changed == 'true'
+        run: .github/script/kubeval.sh
 
   install:
     runs-on: ubuntu-latest
@@ -80,7 +86,7 @@ jobs:
         uses: helm/chart-testing-action@v1.1.0
         with:
           command: install
-          config: .github/ct.yaml
+          config: .github/ct-install.yaml
 
   release:
     if: github.event_name == 'push'
