--- a/charts/buildkit-service/Chart.yaml
+++ b/charts/buildkit-service/Chart.yaml
@@ -2,9 +2,9 @@ apiVersion: v2
 name: buildkit-service
 description: Helm chart for buildkit service deployment
 type: application
-version: 0.0.5
+version: 0.0.6
 appVersion: v0.7.2
 icon: https://raw.githubusercontent.com/andrcuns/buildkit-chart/master/charts/buildkit-service/icon.png
 maintainers:
-  - name: andrcuns
+  - name: Andrejs Cunskis
     email: andrejs.cunskis@gmail.com
