Fix changing redis password (#6)
* Set proper checksums on deployments

* Disable maintainers validation

--- a/charts/dependabot-gitlab/Chart.yaml
+++ b/charts/dependabot-gitlab/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v2
 name: dependabot-gitlab
 description: Deployment chart for dependabot-gitlab app
 type: application
-version: 0.0.11
+version: 0.0.12
 appVersion: 0.0.8
 icon: https://gitlab.com/dependabot-gitlab/dependabot/-/raw/master/logo.png
 maintainers:
-  - name: andrcuns
+  - name: Andrejs Cunskis
     email: andrejs.cunskis@gmail.com
 dependencies:
 - name: redis
