--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -11,22 +11,35 @@ spec:
       {{- include "buildkit.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-    {{- with .Values.podAnnotations }}
+      {{- if or .Values.rootless .Values.podAnnotations }}
       annotations:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+        {{- if .Values.rootless }}
+        container.apparmor.security.beta.kubernetes.io/buildkitd: unconfined
+        container.seccomp.security.alpha.kubernetes.io/buildkitd: unconfined
+        {{- end }}
+        {{- with .Values.podAnnotations -}}
+        {{ toYaml . | nindent 8 }}
+        {{- end }}
+      {{- end }}
       labels:
         {{- include "buildkit.selectorLabels" . | nindent 8 }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          {{- if .Values.rootless }}
+          image: "{{ .Values.image.repository }}:master-rootless"  
+          {{- else }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"  
+          {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - --addr
             - unix:///run/buildkit/buildkitd.sock
             - --addr
             - tcp://0.0.0.0:1234
+          {{- if .Values.rootless }}
+            - --oci-worker-no-process-sandbox
+          {{- end }}
           ports:
             - name: tcp
               containerPort: 1234
@@ -48,7 +61,12 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 30
           securityContext:
+          {{- if .Values.rootless }}
+            runAsUser: 1000
+            runAsGroup: 1000
+          {{- else }}
             privileged: true
+          {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
