--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -14,8 +14,8 @@ spec:
       {{- if or .Values.rootless .Values.podAnnotations }}
       annotations:
         {{- if .Values.rootless }}
-        container.apparmor.security.beta.kubernetes.io/buildkitd: unconfined
-        container.seccomp.security.alpha.kubernetes.io/buildkitd: unconfined
+        container.apparmor.security.beta.kubernetes.io/{{ .Chart.Name }}: unconfined
+        container.seccomp.security.alpha.kubernetes.io/{{ .Chart.Name }}: unconfined
         {{- end }}
         {{- with .Values.podAnnotations -}}
         {{ toYaml . | nindent 8 }}
