--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -26,15 +26,11 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          {{- if .Values.rootless }}
-          image: "{{ .Values.image.repository }}:master-rootless"  
-          {{- else }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"  
-          {{- end }}
+          image: "{{ .Values.image.repository }}:{{ .Values.rootless | ternary "master-rootless" (default .Chart.AppVersion .Values.image.tag) }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - --addr
-            - unix:///run/buildkit/buildkitd.sock
+            - unix:///run/{{ .Values.rootless | ternary "user/1000" ""}}/buildkit/buildkitd.sock
             - --addr
             - tcp://0.0.0.0:1234
           {{- if .Values.rootless }}
