--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -8,7 +8,7 @@ image:
   # -- Image tag
   tag: ""
 
-# -- Run rootless mode
+# -- Run rootless mode, https://github.com/moby/buildkit/blob/master/docs/rootless.md
 rootless: false
 
 # -- Pod annotations
