Add rootless image option (#12)
* Add rootless image option

* Bump buildkit version

* Fix annotations

* Fix socket path

* Add rootless reference to docs

--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -8,6 +8,9 @@ image:
   # -- Image tag
   tag: ""
 
+# -- Run rootless mode, https://github.com/moby/buildkit/blob/master/docs/rootless.md
+rootless: false
+
 # -- Pod annotations
 podAnnotations: {}
 
