--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -39,3 +39,13 @@ tolerations: []
 
 # -- Affinity
 affinity: {}
+
+tls:
+  # -- Enable mTLS, refer to https://github.com/moby/buildkit/tree/master/examples/kubernetes#deployment--service
+  enabled: false
+  # -- Base64 encoded cert.pem
+  cert:
+  # -- Base64 encoded key.pem
+  certKey:
+  # -- Base64 encoded ca.pem
+  certCA:
