--- a/charts/dependabot-gitlab/Chart.yaml
+++ b/charts/dependabot-gitlab/Chart.yaml
@@ -13,3 +13,7 @@ dependencies:
   version: ~11.2.1
   repository: https://charts.bitnami.com/bitnami
   condition: redis.enabled
+- name: mongodb
+  version: ~9.3.1
+  repository: https://charts.bitnami.com/bitnami
+  condition: mongodb.enabled
