--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -4,3 +4,7 @@ credentials:
 
 mongodb:
   enabled: true
+
+image:
+  repository: registry.gitlab.com/dependabot-gitlab/dependabot
+  tag: master-latest
