--- a/.github/ct-install.yaml
+++ b/.github/ct-install.yaml
@@ -1,2 +1,4 @@
+# Dependabot image is large, download takes around 5 minutes
+helm-extra-args: "--timeout 10m"
 chart-repos:
   - redis=https://charts.bitnami.com/bitnami
