--- a/charts/dependabot-gitlab/templates/deployment.yaml
+++ b/charts/dependabot-gitlab/templates/deployment.yaml
@@ -34,20 +34,7 @@ spec:
             - name: tmp
               mountPath: /home/dependabot/tmp
           env:
-            - name: RAILS_ENV
-              value: production
-            - name: RAILS_SERVE_STATIC_FILES
-              value: "true"
-            - name: SECRET_KEY_BASE
-              value: key
-            - name: SETTINGS__GITLAB_URL
-              value: {{ .Values.env.gitlabUrl | quote }}
-            {{- if .Values.env.sentryDsn }}
-            - name: SENTRY_DSN
-              value: {{ .Values.env.sentryDsn }}
-            {{- end }}
-            {{- include "dependabot-gitlab.redisConfig" . | nindent 12 }}
-            {{- include "dependabot-gitlab.mongodbConfig" . | nindent 12 }}
+            {{- include "dependabot-gitlab.environment" . | nindent 12 }}
           ports:
             - name: http
               containerPort: 3000
@@ -83,20 +70,7 @@ spec:
             - name: tmp
               mountPath: /home/dependabot/tmp
           env:
-            - name: RAILS_ENV
-              value: production
-            - name: RAILS_SERVE_STATIC_FILES
-              value: "true"
-            - name: SECRET_KEY_BASE
-              value: key
-            - name: SETTINGS__GITLAB_URL
-              value: {{ .Values.env.gitlabUrl | default "https://gitlab.com" | quote }}
-            {{- if .Values.env.sentryDsn }}
-            - name: SENTRY_DSN
-              value: {{ .Values.env.sentryDsn }}
-            {{- end }}
-            {{- include "dependabot-gitlab.redisConfig" . | nindent 12 }}
-            {{- include "dependabot-gitlab.mongodbConfig" . | nindent 12 }}
+            {{- include "dependabot-gitlab.environment" . | nindent 12 }}
           resources:
             {{- toYaml .Values.worker.resources | nindent 12 }}
       volumes:
