Add mongodb dependency (#17)
* Add mongodb dependency

* Bump chart version

* Use gitlab registry for testing

* Fix mongodb url

* Add startup probe

* Increase timeout

* Extract environment config

--- a/charts/dependabot-gitlab/Chart.yaml
+++ b/charts/dependabot-gitlab/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: dependabot-gitlab
 description: Deployment chart for dependabot-gitlab app
 type: application
-version: 0.0.13
+version: 0.0.14
 appVersion: 0.0.8
 icon: https://gitlab.com/dependabot-gitlab/dependabot/-/raw/master/logo.png
 maintainers:
@@ -13,3 +13,7 @@ dependencies:
   version: ~11.2.1
   repository: https://charts.bitnami.com/bitnami
   condition: redis.enabled
+- name: mongodb
+  version: ~9.3.1
+  repository: https://charts.bitnami.com/bitnami
+  condition: mongodb.enabled
