--- a/charts/dependabot-gitlab/templates/deployment.yaml
+++ b/charts/dependabot-gitlab/templates/deployment.yaml
@@ -34,19 +34,7 @@ spec:
             - name: tmp
               mountPath: /home/dependabot/tmp
           env:
-            - name: RAILS_ENV
-              value: production
-            - name: RAILS_SERVE_STATIC_FILES
-              value: "true"
-            - name: SECRET_KEY_BASE
-              value: key
-            - name: SETTINGS__GITLAB_URL
-              value: {{ .Values.env.gitlabUrl | quote }}
-            {{- if .Values.env.sentryDsn }}
-            - name: SENTRY_DSN
-              value: {{ .Values.env.sentryDsn }}
-            {{- end }}
-            {{- include "dependabot-gitlab.redisConfig" . | nindent 12 }}
+            {{- include "dependabot-gitlab.environment" . | nindent 12 }}
           ports:
             - name: http
               containerPort: 3000
@@ -55,10 +43,19 @@ spec:
             httpGet:
               path: /
               port: http
+            periodSeconds: 120
           readinessProbe:
             httpGet:
               path: /
               port: http
+            periodSeconds: 120
+          startupProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 30
+            failureThreshold: 20
+            periodSeconds: 10
           resources:
             {{- toYaml .Values.web.resources | nindent 12 }}
         - name: {{ .Chart.Name }}-worker
@@ -73,19 +70,7 @@ spec:
             - name: tmp
               mountPath: /home/dependabot/tmp
           env:
-            - name: RAILS_ENV
-              value: production
-            - name: RAILS_SERVE_STATIC_FILES
-              value: "true"
-            - name: SECRET_KEY_BASE
-              value: key
-            - name: SETTINGS__GITLAB_URL
-              value: {{ .Values.env.gitlabUrl | default "https://gitlab.com" | quote }}
-            {{- if .Values.env.sentryDsn }}
-            - name: SENTRY_DSN
-              value: {{ .Values.env.sentryDsn }}
-            {{- end }}
-            {{- include "dependabot-gitlab.redisConfig" . | nindent 12 }}
+            {{- include "dependabot-gitlab.environment" . | nindent 12 }}
           resources:
             {{- toYaml .Values.worker.resources | nindent 12 }}
       volumes:
