--- a/charts/dependabot-gitlab/templates/deployment.yaml
+++ b/charts/dependabot-gitlab/templates/deployment.yaml
@@ -39,23 +39,12 @@ spec:
             - name: http
               containerPort: 3000
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            periodSeconds: 120
           readinessProbe:
             httpGet:
               path: /
               port: http
             periodSeconds: 120
-          startupProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 30
-            failureThreshold: 20
-            periodSeconds: 10
+          {{- include "dependabot-gitlab.probes" . | nindent 10 }}
           resources:
             {{- toYaml .Values.web.resources | nindent 12 }}
         - name: {{ .Chart.Name }}-worker
@@ -71,6 +60,11 @@ spec:
               mountPath: /home/dependabot/tmp
           env:
             {{- include "dependabot-gitlab.environment" . | nindent 12 }}
+          ports:
+            - name: http
+              containerPort: 7433
+              protocol: TCP
+          {{- include "dependabot-gitlab.probes" . | nindent 10 }}
           resources:
             {{- toYaml .Values.worker.resources | nindent 12 }}
       volumes:
