--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -52,10 +52,38 @@ affinity: {}
 web:
   # -- Web container resource definitions
   resources: {}
+  probes:
+    # -- Liveness probe settings
+    livenessProbe:
+      initialDelaySeconds: 10
+      failureThreshold: 20
+      periodSeconds: 5
+    # -- Readiness probe settings
+    readinessProbe:
+      initialDelaySeconds: 10
+      failureThreshold: 20
+      periodSeconds: 5
+    # -- Start probe settings
+    startupProbe:
+      initialDelaySeconds: 20
+      failureThreshold: 20
+      periodSeconds: 5
 
 worker:
   # -- Worker container resource definitions
   resources: {}
+  probes:
+    # -- Liveness probe settings
+    livenessProbe:
+      initialDelaySeconds: 10
+      failureThreshold: 20
+      periodSeconds: 5
+    # -- Start probe settings
+    startupProbe:
+      initialDelaySeconds: 20
+      failureThreshold: 20
+      periodSeconds: 5
+      timeoutSecond: 5
 
 env:
   # -- Redis URL
