--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -83,7 +83,7 @@ worker:
       initialDelaySeconds: 20
       failureThreshold: 20
       periodSeconds: 5
-      timeoutSecond: 5
+      timeoutSeconds: 5
 
 env:
   # -- Redis URL
