Add dependabot url config option

--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -7,6 +7,7 @@ data:
   RAILS_SERVE_STATIC_FILES: "true"
   SECRET_KEY_BASE: key
   SETTINGS__GITLAB_URL: {{ .Values.env.gitlabUrl | quote }}
+  SETTINGS__DEPENDABOT_URL: {{ .Values.env.dependabotUrl | quote }}
   SENTRY_DSN: {{ .Values.env.sentryDsn }}
   MONGODB_DATABASE: {{ .Values.mongodb.auth.database }}
   MONGODB_USER: {{ .Values.mongodb.auth.username }}
