--- a/charts/dependabot-gitlab/templates/deployment-web.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-web.yaml
@@ -1,18 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "dependabot-gitlab.fullname" . }}
+  name: {{ include "dependabot-gitlab.fullname" . }}-web
   labels:
     {{- include "dependabot-gitlab.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.web.replicaCount }}
   selector:
     matchLabels:
       {{- include "dependabot-gitlab.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: web
   template:
     metadata:
       labels:
         {{- include "dependabot-gitlab.selectorLabels" . | nindent 8 }}
+        app.kubernetes.io/component: web
       annotations:
         {{- include "dependabot-gitlab.podAnnotations" . | nindent 8 }}
     spec:
@@ -25,8 +27,6 @@ spec:
           volumeMounts:
             - name: credentials
               mountPath: "/home/dependabot/config/settings"
-            - name: tmp
-              mountPath: /home/dependabot/tmp
           env:
             {{- include "dependabot-gitlab.database-credentials" . | nindent 12 }}
           envFrom:
@@ -53,45 +53,11 @@ spec:
             {{- toYaml .Values.web.probes.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.web.resources | nindent 12 }}
-        - name: {{ .Chart.Name }}-worker
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          args: ["sidekiq"]
-          volumeMounts:
-            - name: credentials
-              mountPath: /home/dependabot/config/settings
-            - name: tmp
-              mountPath: /home/dependabot/tmp
-          env:
-            - name: SIDEKIQ_ALIVE_SERVER
-              value: {{ .Values.worker.probes.probeServer }}
-            {{- include "dependabot-gitlab.database-credentials" . | nindent 12 }}
-          envFrom:
-            - configMapRef:
-                name: {{ include "dependabot-gitlab.fullname" . }}
-          ports:
-            - name: http
-              containerPort: 7433
-              protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            {{- toYaml .Values.worker.probes.livenessProbe | nindent 12 }}
-          startupProbe:
-            httpGet:
-              path: /
-              port: http
-            {{- toYaml .Values.worker.probes.startupProbe | nindent 12 }}
-          resources:
-            {{- toYaml .Values.worker.resources | nindent 12 }}
       volumes:
         - name: credentials
           secret:
             secretName: {{ include "dependabot-gitlab.fullname" . }}
             defaultMode: 0400
-        - name: tmp
-          emptyDir: {}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
