Update docs for private repo credentials, change default probe settings (#31)
* Update docs and default probes values

* Bump chart version

* Enable mongodb by default

* Remove trailing spaces

* Update doc string

--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -57,18 +57,18 @@ web:
     livenessProbe:
       initialDelaySeconds: 10
       failureThreshold: 20
-      periodSeconds: 5
+      periodSeconds: 30
     # -- Readiness probe settings
     readinessProbe:
       initialDelaySeconds: 10
       failureThreshold: 20
-      periodSeconds: 5
+      periodSeconds: 30
     # -- Start probe settings
     startupProbe:
       initialDelaySeconds: 20
       failureThreshold: 20
       periodSeconds: 5
-      timeoutSeconds: 5
+      timeoutSeconds: 10
 
 worker:
   # -- Worker container replicas count
@@ -80,25 +80,25 @@ worker:
     livenessProbe:
       initialDelaySeconds: 10
       failureThreshold: 20
-      periodSeconds: 5
+      periodSeconds: 120
     # -- Start probe settings
     startupProbe:
       initialDelaySeconds: 20
       failureThreshold: 20
       periodSeconds: 5
-      timeoutSeconds: 5
+      timeoutSeconds: 10
 
 env:
   # -- Redis URL
-  redisUrl:
+  redisUrl: ""
   # -- MongoDB URL
-  mongoDbUrl:
+  mongoDbUrl: ""
   # -- Gitlab instance URL
   gitlabUrl: https://gitlab.com
   # -- Optional sentry dsn for error reporting
-  sentryDsn:
+  sentryDsn: ""
   # -- Optional app url, used for automated webhook creation
-  dependabotUrl:
+  dependabotUrl: ""
 
 credentials:
   # -- Gitlab access token, required
@@ -107,11 +107,14 @@ credentials:
   github_access_token: ""
   # -- Gitlab auth token for webhook authentication
   gitlab_auth_token: ""
-  # -- Private maven repository credentials
+  # -- Private maven repository credentials, multiple repositories referenced by uniqe name:
+  # repoName: {url: url, username: username, password: password}
   maven: {}
-  # -- Private npm package registry cretentials
+  # -- Private npm package registry cretentials, multiple repositories referenced by uniqe name:
+  # registryName: {registry: registry, token: token}
   npm: {}
-  # -- Private docker registry credentials
+  # -- Private docker registry credentials, multiple repositories referenced by uniqe name:
+  # registryName: {registry: registry, username: username, password: password}
   docker: {}
 
 redis:
@@ -131,13 +134,13 @@ redis:
 
 mongodb:
   # -- Enable mongodb installation
-  enabled: false
+  enabled: true
   # -- String to fully override mongodb.fullname template
   fullnameOverride: mongodb
   # -- Kubernetes Cluster Domain
   clusterDomain: cluster.local
   auth:
-  # -- Enable authentication
+    # -- Enable authentication
     enabled: true
     # -- MongoDB root password
     rootPassword: ""
