Add graceful shutdown of sidekiq (#33)
* Add graceful shutdown of sidekiq

* Bump chart version and app version

* Fix indentation

--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -46,8 +46,14 @@ spec:
               path: /
               port: http
             {{- toYaml .Values.worker.probes.startupProbe | nindent 12 }}
+          lifecycle:
+            preStop:
+              exec:
+                # SIGTERM triggers a quick exit; gracefully terminate instead
+                command: ["kube/sidekiq_quiet.sh"]
           resources:
             {{- toYaml .Values.worker.resources | nindent 12 }}
+      terminationGracePeriodSeconds: 300 # Large dependency files or docker images can take long time to process
       volumes:
         - name: credentials
           secret:
